fix z-index for yellow bars on archive/content

--- a/sass/scss/single/_post.scss
+++ b/sass/scss/single/_post.scss
@@ -4,6 +4,8 @@
 
 .single-post--container {
     @extend %susy-container;
+    position: relative;
+    z-index: 1;
 
     a {
         color: $color-link;
